--- a/prizma/sass/blocks/glossary.scss
+++ b/prizma/sass/blocks/glossary.scss
@@ -29,19 +29,38 @@
   }
 }
 
-.glossary__button {
+.glossary__control {
   display: flex;
   justify-content: center;
+  height: 37px;
   margin: 20px 0 50px 0;
+}
+
+.glossary__button {
+  margin: 0 20px;
+  padding: 0;
+  font-size: 20px;
+  font-family: 'ProximaNova-Semibold', sans-serif;
+  border: none;
+  border-bottom: 2px solid transparent;
+  background: transparent;
+  transition: 0.3s;
+  outline: none;
+  cursor: pointer;
   
-  button {
-    padding: 0 20px;
-    font-size: 20px;
-    font-family: 'ProximaNova-Semibold', sans-serif;
-    border: none;
-    background: transparent;
-    cursor: pointer;
+  &--active {
+    color: #da2f69;
+    font-size: 30px;
+    border-bottom: 2px solid #da2f69;
   }
+  
+  &:hover {
+    color: #da2f69;
+  }
+}
+
+.glossary__article {
+  display: none;
 }
 
 .glossary__name {
@@ -63,10 +82,45 @@
 
 .glossary__content {
   max-height: 0;
+  margin: 0 0 10px 0;
   padding: 0 15px;
   font-family: 'ProximaNova-Regular', sans-serif;
   border-radius: 30px;
   background: #7cb3e1;
   overflow: hidden;
   transition: max-height 0.3s ease-out;
+}
+
+@media screen and ($tablet-widths) {
+  .glossary__button {
+    margin: 0 10px;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .glossary__control {
+    flex-wrap: wrap;
+    height: 66px;
+    margin: 20px 0;
+  }
+  
+  .glossary__button {
+    margin: 0 10px 10px 10px;
+    font-size: 14px;
+    
+    &--active {
+      font-size: 20px;
+    }
+  }
+  
+  .glossary__name {
+    font-size: 15px;
+  }
+  
+  .glossary__content {
+    
+    p {
+      font-size: 13px;
+    }
+  }
 }
