--- a/forexglobal/sass/blocks/inner/glossary.scss
+++ b/forexglobal/sass/blocks/inner/glossary.scss
@@ -1,44 +1,116 @@
-.glossary__button {
+.glossary__control {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  // flex-wrap: wrap;
-  height: 60px;
-  margin: 10px 0;
+  justify-content: center;
+  height: 47px;
+  margin: 20px 0 50px 0;
+}
+
+.glossary__button {
+  margin: 0 10px;
   padding: 0;
-  list-style: none;
+  color: $sc;
+  font-size: 30px;
+  font-weight: 500;
+  font-family: inherit;
+  border: none;
+  background: transparent;
+  transition: 0.3s;
+  outline: none;
+  cursor: pointer;
   
-  li {
-    
-    button {
-      color: $sc;
-      font-size: 30px;
-      font-weight: 500;
-      font-family: inherit;
-      border: none;
-      background: transparent;
-      cursor: pointer;
-      transition: 0.3s;
-      
-      &:hover {
-        color: #6420ff;
-        font-size: 40px;
-      }
-    }
+  &--active {
+    color: #6420ff;
+    font-size: 40px;
+  }
+  
+  &:hover {
+    color: #6420ff;
   }
 }
 
-@media screen and ($tablet-widths) {}
+.glossary__article {
+  display: none;
+}
+
+.glossary__name {
+  position: relative;
+  width: 100%;
+  margin: 0 0 10px 0;
+  padding: 0 15px;
+  color: $sc;
+  font-size: 18px;
+  font-weight: 500;
+  font-family: inherit;
+  text-align: left;
+  border: none;
+  background: transparent;
+  transition: 0.3s;
+  outline: none;
+  cursor: pointer;
+  
+  &--active {
+    color: #6420ff;
+    font-size: 30px;
+    
+    &:after {
+      transform: rotate(180deg);
+    }
+  }
+  
+  &:after {
+    content: '';
+    position: absolute;
+    top: 7px;
+    right: 15px;
+    width: 15px;
+    height: 9px;
+    background: url('../img/details-marker.svg') no-repeat center;
+    transition: 0.3s;
+  }
+}
+
+.glossary__content {
+  max-height: 0;
+  margin: 0 0 10px 0;
+  padding: 0 15px;
+  font-weight: 300;
+  border-bottom: 1px solid #6420ff;
+  // border-radius: 30px;
+  // background: #7cb3e1;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+}
+
+@media screen and ($tablet-widths) {
+  .glossary__button {
+    margin: 0 10px;
+  }
+}
 
 @media screen and ($mobile-widths) {
+  .glossary__control {
+    flex-wrap: wrap;
+    // height: 47px;
+    margin: 20px 0;
+  }
+  
   .glossary__button {
-    justify-content: center;
+    margin: 0 10px 10px 10px;
+    font-size: 14px;
     
-    li {
+    &--active {
+      font-size: 20px;
+    }
+  }
+  
+  .glossary__name {
+    font-size: 15px;
+  }
+  
+  .glossary__content {
     
-      button {
-        font-size: 15px;
-      }  
+    p {
+      font-size: 13px;
     }
   }
 }
