--- a/forexglobal/sass/blocks/inner/tab.scss
+++ b/forexglobal/sass/blocks/inner/tab.scss
@@ -17,10 +17,17 @@
   outline: none;
   cursor: pointer;
   transition: 0.3s;
+  
+  &--bronze {
+    background: #af7940;
+  }
 
-  &:hover {
-    color: #fff;
-    background: #6420fa;
+  &--silver {
+    background: #b1b1b1;
+  }
+  
+  &--gold {
+    background: #d2ad53;
   }
   
   &:last-child {
@@ -33,7 +40,7 @@
   color: #fff;
   font-size: 18px;
   font-weight: 500;
-  background: #6420ff;
+  // background: #6420ff;
 }
 
 .tab__content {
