--- a/prizma/templates/forex.html
+++ b/prizma/templates/forex.html
@@ -139,21 +139,21 @@
         <img class="footer__logo" src="../img/footer-logo.svg" alt="PrizmaFX">
       </a>
         <ul class="footer__links">
-          <li><a href="#">Licenses</a></li>
+          <li><a href="../templates/about-us.html">About Us</a></li>
           <li>|</li>
-          <li><a>Account Types</a></li>
+          <li><a href="../templates/careers.html">Careers</a></li>
           <li>|</li>
-          <li><a href="#">Funding & Withdrawal</a></li>
+          <li><a href="../templates/contact-us.html">Contact</a></li>
           <li>|</li>
-          <li><a href="#">Product Specification</a></li>
+          <li><a href="../templates/security.html">Security</a></li>
           <li>|</li>
-          <li><a href="#">Economic Calendar</a></li>
+          <li><a href="../templates/privacy-policy.html">Privacy Policy</a></li>
           <li>|</li>
-          <li><a href="#">Legal Documents</a></li>
+          <li><a href="../templates/terms-and-conditions.html">Terms and Conditions</a></li>
           <li>|</li>
-          <li><a href="#">Partners</a></li>
+          <li><a href="../templates/risk-disclosure.html">Risk Disclosure</a></li>
           <li>|</li>
-          <li><a href="#">Faq</a></li>
+          <li><a href="../templates/faq.html">Faq</a></li>
         </ul>
     </div>
     <hr class="footer__hr">
