--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -1539,18 +1539,19 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 30px 0 0 0;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  margin: 30px 0 50px 0;
   overflow: hidden; }
 
 .tab__button {
-  width: 170px;
-  margin: 0 10px 0 0;
+  width: 270px;
   padding: 15px 0;
   color: #fff;
   font-size: 16px;
   font-weight: 300;
   border: none;
-  border-top-right-radius: 30px;
+  border-radius: 3px;
   background: #2f2861;
   outline: none;
   cursor: pointer;
@@ -1562,14 +1563,88 @@ body {
     background: #b1b1b1; }
   .tab__button--gold {
     background: #d2ad53; }
-  .tab__button:last-child {
-    margin: 0; }
 
 .tab__active {
-  width: 200px;
+  width: 270px;
   color: #fff;
-  font-size: 18px;
-  font-weight: 500; }
+  font-weight: 600; }
+
+.tab__anchor {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.tab__marker {
+  position: relative;
+  width: 170px;
+  margin: 0 10px 0 0;
+  padding: 15px 0;
+  color: #fff;
+  font-size: 13px;
+  text-align: center;
+  text-decoration: none;
+  border-top-right-radius: 30px;
+  background: #2f2861;
+  -webkit-transition: 0.3s;
+  transition: 0.3s; }
+  .tab__marker--forex:before {
+    content: '';
+    position: absolute;
+    top: 13px;
+    left: 25px;
+    width: 20px;
+    height: 21px;
+    background: url("../img/tab-forex.svg") no-repeat center;
+    background-size: cover; }
+  .tab__marker--energies:before {
+    content: '';
+    position: absolute;
+    top: 11px;
+    left: 22px;
+    width: 20px;
+    height: 24px;
+    background: url("../img/tab-energies.svg") no-repeat center;
+    background-size: cover; }
+  .tab__marker--commodities:before {
+    content: '';
+    position: absolute;
+    top: 13px;
+    left: 15px;
+    width: 26px;
+    height: 20px;
+    background: url("../img/tab-commodities.svg") no-repeat center;
+    background-size: cover; }
+  .tab__marker--metals:before {
+    content: '';
+    position: absolute;
+    top: 13px;
+    left: 19px;
+    width: 31px;
+    height: 20px;
+    background: url("../img/tab-metals.svg") no-repeat center;
+    background-size: cover; }
+  .tab__marker--indices:before {
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    width: 30px;
+    height: 25px;
+    background: url("../img/tab-indices.svg") no-repeat center;
+    background-size: cover; }
+  .tab__marker--equities:before {
+    content: '';
+    position: absolute;
+    top: 8px;
+    left: 17px;
+    width: 30px;
+    height: 31px;
+    background: url("../img/tab-equities.svg") no-repeat center;
+    background-size: cover; }
+  .tab__marker:last-child {
+    margin: 0; }
+  .tab__marker:hover {
+    background: #6420ff; }
 
 .tab__content {
   display: none;
@@ -1579,7 +1654,8 @@ body {
   border-top-right-radius: 30px;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
-  overflow: scroll; }
+  overflow: scroll;
+  scroll-behavior: smooth; }
   .tab__content h3 {
     color: #2f2861;
     font-size: 30px;
