--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -1539,112 +1539,30 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  margin: 30px 0 50px 0;
-  overflow: hidden; }
+  margin: 30px 0 0 0; }
 
 .tab__button {
-  width: 270px;
+  width: 170px;
+  margin: 0 10px 0 0;
   padding: 15px 0;
   color: #fff;
   font-size: 16px;
   font-weight: 300;
   border: none;
-  border-radius: 3px;
+  border-top-right-radius: 30px;
   background: #2f2861;
   outline: none;
   cursor: pointer;
   -webkit-transition: 0.3s;
   transition: 0.3s; }
-  .tab__button--bronze {
-    background: #af7940; }
-  .tab__button--silver {
-    background: #b1b1b1; }
-  .tab__button--gold {
-    background: #d2ad53; }
+  .tab__button:hover {
+    background: #6420ff; }
 
 .tab__active {
   width: 270px;
   color: #fff;
-  font-weight: 600; }
-
-.tab__anchor {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex; }
-
-.tab__marker {
-  position: relative;
-  width: 170px;
-  margin: 0 10px 0 0;
-  padding: 15px 0;
-  color: #fff;
-  font-size: 13px;
-  text-align: center;
-  text-decoration: none;
-  border-top-right-radius: 30px;
-  background: #2f2861;
-  -webkit-transition: 0.3s;
-  transition: 0.3s; }
-  .tab__marker--forex:before {
-    content: '';
-    position: absolute;
-    top: 13px;
-    left: 25px;
-    width: 20px;
-    height: 21px;
-    background: url("../img/tab-forex.svg") no-repeat center;
-    background-size: cover; }
-  .tab__marker--energies:before {
-    content: '';
-    position: absolute;
-    top: 11px;
-    left: 22px;
-    width: 20px;
-    height: 24px;
-    background: url("../img/tab-energies.svg") no-repeat center;
-    background-size: cover; }
-  .tab__marker--commodities:before {
-    content: '';
-    position: absolute;
-    top: 13px;
-    left: 15px;
-    width: 26px;
-    height: 20px;
-    background: url("../img/tab-commodities.svg") no-repeat center;
-    background-size: cover; }
-  .tab__marker--metals:before {
-    content: '';
-    position: absolute;
-    top: 13px;
-    left: 19px;
-    width: 31px;
-    height: 20px;
-    background: url("../img/tab-metals.svg") no-repeat center;
-    background-size: cover; }
-  .tab__marker--indices:before {
-    content: '';
-    position: absolute;
-    top: 10px;
-    left: 20px;
-    width: 30px;
-    height: 25px;
-    background: url("../img/tab-indices.svg") no-repeat center;
-    background-size: cover; }
-  .tab__marker--equities:before {
-    content: '';
-    position: absolute;
-    top: 8px;
-    left: 17px;
-    width: 30px;
-    height: 31px;
-    background: url("../img/tab-equities.svg") no-repeat center;
-    background-size: cover; }
-  .tab__marker:last-child {
-    margin: 0; }
-  .tab__marker:hover {
-    background: #6420ff; }
+  font-weight: 600;
+  background: #6420ff; }
 
 .tab__content {
   display: none;
