add whatsapp button

--- a/bb/css/style.css
+++ b/bb/css/style.css
@@ -1018,11 +1018,22 @@ body {
 .footer__skype {
   position: fixed;
   right: 50px;
-  bottom: 50px;
+  bottom: 130px;
   display: block;
   width: 60px;
   height: 60px;
   background: url("../img/footer-skype.svg") no-repeat center;
+  -webkit-animation: skype 1s infinite alternate;
+  animation: skype 1s infinite alternate; }
+
+.footer__whatsapp {
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
+  display: block;
+  width: 60px;
+  height: 60px;
+  background: url("../img/footer-whatsapp.svg") no-repeat center;
   -webkit-animation: skype 1s infinite alternate;
   animation: skype 1s infinite alternate; }
 
@@ -1068,6 +1079,11 @@ body {
     width: auto;
     text-align: center; }
   .footer__skype {
+    right: 15px;
+    bottom: 80px;
+    width: 50px;
+    height: 50px; }
+  .footer__whatsapp {
     right: 15px;
     bottom: 15px;
     width: 50px;
