--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -745,6 +745,104 @@ body {
   .welcome__button {
     margin: auto; } }
 
+.slider__container {
+  width: 1170px;
+  height: inherit;
+  margin: auto;
+  padding: 0 15px; }
+
+.slider__box {
+  height: 480px; }
+  .slider__box b {
+    color: #2f2861;
+    font-size: 30px;
+    font-weight: 500; }
+  .slider__box p {
+    font-weight: 300; }
+  .slider__box--1 {
+    background: url("../img/slider-1.jpg") no-repeat center;
+    background-size: cover; }
+  .slider__box--2 {
+    background: url("../img/slider-2.jpg") no-repeat center;
+    background-size: cover; }
+  .slider__box--3 {
+    background: url("../img/slider-3.jpg") no-repeat center;
+    background-size: cover; }
+
+.slider__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 450px;
+  height: inherit;
+  margin: 0 0 0 auto; }
+
+.slider__text {
+  width: 420px; }
+
+.slider__social {
+  height: 260px; }
+  .slider__social ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    height: inherit;
+    margin: 0;
+    padding: 0;
+    list-style: none; }
+
+.slider__item {
+  display: block;
+  width: 15px;
+  height: 15px; }
+  .slider__item--fb {
+    background: url("../img/social-fb.svg") no-repeat center; }
+  .slider__item--in {
+    background: url("../img/social-in.svg") no-repeat center; }
+  .slider__item--gp {
+    background: url("../img/social-gp.svg") no-repeat center; }
+  .slider__item--tw {
+    background: url("../img/social-tw.svg") no-repeat center; }
+
+@media screen and (max-width: 1200px) {
+  .slider__container {
+    width: 95%;
+    padding: 0; }
+  .slider__box--1 {
+    background-position-x: -550px; }
+  .slider__box--2 {
+    background-position-x: -550px; }
+  .slider__box--3 {
+    background-position-x: -550px; } }
+
+@media screen and (max-width: 768px) {
+  .slider__flex,
+  .slider__box {
+    width: auto; }
+  .slider__flex {
+    margin: 0; }
+  .slider__box--1 {
+    background-position-x: -100px; }
+  .slider__box--2 {
+    background-position-x: -50px; }
+  .slider__box--3 {
+    background-position-x: -70px; }
+  .slider__text {
+    width: 300px; } }
+
 .edge {
   padding: 40px 0;
   background: #0c194f url("../img/edge-bg.jpg") no-repeat top;
