--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -8,6 +8,7 @@
 @import 'blocks/main/header';
 @import 'blocks/main/nav';
 @import 'blocks/main/welcome';
+@import 'blocks/main/slider';
 @import 'blocks/main/edge';
 @import 'blocks/main/account';
 @import 'blocks/main/tabs';
