--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -19,19 +19,12 @@
 @import 'blocks/main/footer';
 
 // Inner Page
-// @import 'blocks/inner/webtrader';
 @import 'blocks/inner/account-types';
-// @import 'blocks/inner/account-comparison';
-// @import 'blocks/inner/product-specification';
 @import 'blocks/inner/tab';
-// @import 'blocks/inner/security-of-funds';
-// @import 'blocks/inner/stp';
-// @import 'blocks/inner/kids';
-// @import 'blocks/inner/careers';
 @import 'blocks/inner/announcements';
 @import 'blocks/inner/contact';
 @import 'blocks/inner/glossary';
 @import 'blocks/inner/inner';
 @import 'blocks/inner/table';
 @import 'blocks/inner/zulu';
-@import 'blocks/inner/register';
+@import 'blocks/inner/client';
