--- a/forexglobal/sass/blocks/inner/tab.scss
+++ b/forexglobal/sass/blocks/inner/tab.scss
@@ -142,18 +142,27 @@
   }
 }
 
+.tab__header {
+  position: sticky;
+  top: 0;
+  padding: 10px 0;
+  background: #fff;
+  z-index: 5;
+}
+
 .tab__content {
   display: none;
-  height: 500px;
-  padding: 12px;
+  height: 700px;
+  padding: 25px;
   border: 1px solid #6420ff;
   border-top-right-radius: 30px;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   overflow: scroll;
-  scroll-behavior: smooth;
   
   h3 {
+    margin: 0;
+    padding: 30px 0;
     color: $sc;
     font-size: 30px;
     font-weight: 500;
@@ -189,11 +198,13 @@
 }
 
 .tab__table {
+  // position: relative;
   width: 100%;
   margin: 0 0 10px 0;
   color: #fff;
   text-align: center;
   border-collapse: collapse;
+  // z-index: 1;
   
   th {
     padding: 10px;
@@ -279,5 +290,13 @@
   .tab__content {
     border-top: none;
     border-radius: 3px;
+  }
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .tab__header {
+    position: static;
   }
 }
