--- a/forexglobal/sass/blocks/inner/tab.scss
+++ b/forexglobal/sass/blocks/inner/tab.scss
@@ -153,7 +153,7 @@
 .tab__content {
   display: none;
   height: 700px;
-  padding: 25px;
+  padding: 0 25px 25px 25px;
   border: 1px solid #6420ff;
   border-top-right-radius: 30px;
   border-bottom-left-radius: 3px;
@@ -198,13 +198,11 @@
 }
 
 .tab__table {
-  // position: relative;
   width: 100%;
   margin: 0 0 10px 0;
   color: #fff;
   text-align: center;
   border-collapse: collapse;
-  // z-index: 1;
   
   th {
     padding: 10px;
@@ -226,6 +224,41 @@
   
   td {
     padding: 10px 0;
+  }
+  
+  &--header {
+    margin: 0;
+  }
+  
+  &--product {
+    
+    th {
+      
+      &:last-child {
+        border-top-right-radius: 0;
+      }
+    }
+  }
+}
+
+.tab__name {
+  position: sticky;
+  top: 0;
+}
+
+.tab__name {
+  
+  th {
+    position: sticky;
+    border-radius: none;
+    z-index: 1;
+  }
+  
+  &--forex {
+    
+    th {
+      top: 366px;
+    }
   }
 }
 
